# skidjular

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build-debug.sh  build-release.sh  build.sh  buildRelease.sh  conanfile.txt  default.nix
.github/workflows/: linux-ccpp.yml  macOS-ccpp.yml  win-ccpp.yml
skidjular/: main.cpp  skidjular_funcs.h  skids_funcs.h  skids_parser.h  skids_parserdef.h
skidjular/cmds/: init.cpp
skidjular/dispatcher/: dispatcher.cpp  dispatcher.h
skidjular/parser/: parser.cpp  parser.h
skidjular/tree/: tree.h  tree.tpp
src/: data.cpp  data.h  log.cpp  log.h  main.cpp  module.h  timer.cpp  timer.h
src/modules/: history.cpp  history.h  info.cpp  info.h  init.cpp  init.h  proj.cpp  proj.h  skids.cpp  skids.h
